# django-kickstarter

./: .gitignore  .prettierrc.yaml  README.md  dprint.json  dprint.jsonc  package.json  pyproject.toml  requirements.txt  reset.sh  startup.fish  startup.ps1  startup.sh  tailwind.config.js  vercel.json
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/templates/accounts/: profile.html
core/: schema.py  types.py  urls.py  views.py
core/templates/core/: base.html  index.html  nav.html
nginx/: compose.yaml
nginx/etc/nginx/: nginx.conf  nginx.conf.bak
nginx/etc/nginx/html/: index.html
nginx/etc/nginx/html/css/: style.css
project/: settings.py  urls.py  wsgi.py
